# flashlight

./: README.md  com.streamer272.Flashlight.json  meson.build
data/: com.streamer272.Flashlight.appdata.xml.in  com.streamer272.Flashlight.desktop.in  com.streamer272.Flashlight.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: flashlight-application.c  flashlight-application.h  flashlight-window.c  flashlight-window.css  flashlight-window.h  flashlight-window.ui  flashlight.gresource.xml  main.c  meson.build
src/gtk/: help-overlay.ui
